--- a/onu_activator/news
+++ b/onu_activator/news
@@ -1,2 +1,2 @@
-Новости Новости Новости Новости Новости Новости Новости Новости Новости Новости 
+Один Два Три Четыре Пять Шесть Семь Восемь Девять
 Новая строка
