--- a/onu_activator/news
+++ b/onu_activator/news
@@ -1,2 +1,3 @@
+# Строка должна содержать не больше 46 символов, и не начинаться с символа '#'
 Один Два Три Четыре Пять Шесть Семь Восемь
 Новая строка
