--- a/onu_activator/news
+++ b/onu_activator/news
@@ -1,3 +1,4 @@
 # Строка должна содержать не больше 46 символов, и не начинаться с символа '#'
-Один Два Три Четыре Пять Шесть Семь Восемь
+Один Два Три Четыре Пять Шесть Семь Восемь Опа
 Новая строка
+
