--- a/onu_activator/news
+++ b/onu_activator/news
@@ -1,3 +1,3 @@
-# Строка должна содержать не больше 46 символов, и не начинаться с символа '#'
+# Строка должна содержать не больше 46 символов, и не содержать символа '#'
 Один Два Три Четыре Пять Шесть Семь Восемь Опа
 Новая строка
