--- a/onu_activator/news
+++ b/onu_activator/news
@@ -1,4 +1,4 @@
 # Строка должна содержать не больше 46 символов, и не содержать символа '#'
 Один Два Три Четыре Пять Шесть Семь Восемь Опа
 Новая строка
-Третья строка ЛА-ЛА-ЛА
+Третья строка ЛА-ЛА-ЛА и снова седая ночь, и только ей доверяю я!
